# Leviathan

./: .appveyor.yml  .clang-format  .gitattributes  .gitignore  .gitmodules  .lfsconfig  Additional Programming.txt  CMakeLists.txt  Cloc_count_lines.sh  CopyCEGUI.bat  CopyCEGUI.bat.in  CreateDockerImages.rb  CreateLinuxIcon.rb  CreateSymbolsForTarget.bat  CreateSymbolsForTarget.sh  Engine_lines.sh  ErrorCodes.txt  File templates.txt  ImportAssets.rb  Leviathan TODO.txt  Leviathan application template.cpp  Leviathan template include header.h  LeviathanDoxy.in  LeviathanIconDoxy.xcf  LeviathanLibraries.rb  License.txt  MoveSymbolFile.bat  MoveSymbolFile.sh  PackagePrecompiledDep.rb  README.MD  README.md  RunCodeIndexing.sh  Setup.rb  TODO Goal basic scene.txt  TODO in the future.txt  UDP_port_issue.txt  leakit.txt
Engine/: .gitignore  AngelScriptCommon.h  AnimateableGui.cpp  AnimateableGui.h  AnimationBlock.cpp  AnimationBlock.h  AnimationBoneData.cpp  AnimationBoneData.h  AnimationManager.cpp  AnimationManager.h  AnimationMasterBlock.cpp  AnimationMasterBlock.cpp.rej  AnimationMasterBlock.h  AnimationStream.cpp  AnimationStream.h  AppDefine.cpp  AppDefine.h  Application.cpp  Application.h  AutoUpdateable.cpp  AutoUpdateable.h  BaseGuiEventable.cpp  BaseGuiEventable.h  BaseGuiObject.cpp  BaseGuiObject.h  BaseModelDataObject.cpp  BaseModelDataObject.h  BaseObject.cpp  BaseObject.h  BasePositionable.cpp  BasePositionable.h  BaseRenderable.h  BaseRenderableBufferContainer.cpp  BaseRenderableBufferContainer.h  BaseScalable.cpp  BaseScalable.h  BaseShader.cpp  BaseShader.h  BaseTickable.cpp  BumpModelData.cpp  (+199 more)
Engine/Addons/: GameModule.cpp  GameModule.h  GameModuleLoader.cpp  GameModuleLoader.h
Engine/AngelScriptJIT/: as_jit.cpp  as_jit.h  virtual_asm.h  virtual_asm_linux.cpp  virtual_asm_windows.cpp  virtual_asm_x64.cpp  virtual_asm_x86.cpp
Engine/Application/: AppDefine.cpp  AppDefine.h  Application.cpp  Application.h  ClientApplication.cpp  ClientApplication.h  ConsoleInput.cpp  ConsoleInput.h  CrashHandler.cpp  CrashHandler.h  GameConfiguration.cpp  GameConfiguration.h  KeyConfiguration.cpp  KeyConfiguration.h  MasterServerApplication.cpp  MasterServerApplication.h  ServerApplication.cpp  ServerApplication.h
Engine/Common/: BaseNotifiable.cpp  BaseNotifiable.h  BaseNotifiableImpl.h  BaseNotifier.cpp  BaseNotifier.h  BaseNotifierImpl.h  CommonMath.cpp  CommonMath.h  DiligentConversions.h  ErrorTypes.h  ExtraAlgorithms.h  GraphicalInputEntity.cpp  GraphicalInputEntity.h  Matrix.cpp  Matrix.h  MimeTypes.cpp  MimeTypes.h  Misc.cpp  Misc.h  ObjectPool.h  ObjectPoolThreadSafe.h  Plane.cpp  Plane.h  Quaternion.cpp  Quaternion.h  Ray.cpp  Ray.h  ReferenceCounted.cpp  ReferenceCounted.h  SFMLPackets.cpp  SFMLPackets.h  StartEndIndex.cpp  StartEndIndex.h  StringOperations.cpp  StringOperations.h  ThreadSafe.cpp  ThreadSafe.h  Types.cpp  Types.h  TypesOgreCompat.h  (+4 more)
Engine/Editor/: Editor.cpp  Editor.h  Importer.cpp  Importer.h
Engine/Entities/: CommonStateObjects.cpp  CommonStateObjects.h  Component.h  ComponentState.cpp  ComponentState.h  Components.cpp  Components.h  EntityCommon.h  GameWorld.cpp  GameWorld.h  GameWorldFactory.cpp  GameWorldFactory.h  GenerateComponentStates.rb  GenerateStandardWorld.rb  ModelObject.cpp  ModelObject.h  Node.h  Nodes.cpp  Nodes.h  NormalModelData.h  PerWorldData.cpp  PerWorldData.h  ScriptComponentHolder.cpp  ScriptComponentHolder.h  ScriptSystemWrapper.cpp  ScriptSystemWrapper.h  StandardComponents.rb  StandardSystems.rb  StandardWorld.rb  StateHolder.cpp  StateHolder.h  StateInterpolator.h  System.h  Systems.cpp  Systems.h  ViewerCameraPos.cpp  ViewerCameraPos.h  WorldNetworkSettings.h
Engine/Events/: AutoUpdateable.cpp  AutoUpdateable.h  CallableObject.cpp  CallableObject.h  DelegateSlot.cpp  DelegateSlot.h  Event.cpp  Event.h  EventHandler.cpp  EventHandler.h  EventableScriptObject.cpp  EventableScriptObject.h
Engine/Exceptions/: ExceptionBase.cpp  ExceptionBase.h  ExceptionInvalidAccess.cpp  ExceptionInvalidAccess.h  ExceptionInvalidArguement.cpp  ExceptionInvalidArguement.h  ExceptionInvalidArgument.cpp  ExceptionInvalidArgument.h  ExceptionInvalidState.cpp  ExceptionInvalidState.h  ExceptionInvalidType.cpp  ExceptionInvalidType.h  ExceptionNULLPtr.cpp  ExceptionNULLPtr.h  ExceptionNotFound.cpp  ExceptionNotFound.h
Engine/GUI/: AlphaHitCache.cpp  AlphaHitCache.h  BaseGuiContainer.h  BaseGuiObject.cpp  BaseGuiObject.h  CEFConversionHelpers.cpp  CEFConversionHelpers.h  CEFLocalResourceRequest.cpp  CEFLocalResourceRequest.h  GuiAnimation.h  GuiCEFApplication.cpp  GuiCEFApplication.h  GuiCEFHandler.cpp  GuiCEFHandler.h  GuiCollection.cpp  GuiCollection.h  GuiInputSettings.h  GuiKeyListener.cpp  GuiKeyListener.h  GuiLayer.cpp  GuiLayer.h  GuiManager.cpp  GuiManager.h  GuiObjectExtraParameters.h  GuiRenderer.cpp  GuiRenderer.h  GuiScriptBind.h  GuiScriptInterface.cpp  GuiScriptInterface.h  GuiShaders.h  GuiView.cpp  GuiView.h  GuiWidgetContainer.cpp  GuiWidgetContainer.h  GuiWidgetLayer.cpp  GuiWidgetLayer.h  JSEventInterface.cpp  (+17 more)
FileGenerator/: CMakeLists.txt  FileGenerator.cpp  FileGenerator.h  JSMin.h  Main.cpp
LeviathanTest/: CMakeLists.txt  Define.h  DummyLog.cpp  DummyLog.h  LeviathanTest.vcxproj  LeviathanTest.vcxproj.filters  Main.cpp  NetworkTestHelpers.cpp  NetworkTestHelpers.h  OtherTestHelpers.h  PartialEngine.cpp  PartialEngine.h  TestAutoUpdateable.h  TestCallable.h  TestFunction.h  TestFunctions.h
Pong/: Arena.cpp  Arena.h  CMakeLists.txt  GameInputController.cpp  GameInputController.h  Main.cpp  Main_Res.rc  PlayerSlot.cpp  PlayerSlot.h  Pong file templates.txt  PongGame.cpp  PongGame.h  PongIncludes.h  PongJSInterface.cpp  PongJSInterface.h  PongNetHandler.cpp  PongNetHandler.h  PongV8Extension.js
PongServer/: CMakeLists.txt  Main.cpp  PongCommandHandler.cpp  PongCommandHandler.h  PongServer.cpp  PongServer.h  PongServerNetworking.cpp  PongServerNetworking.h  PreCompiled.cpp
Project_sandboxie/: App.cpp  App.h  CMakeLists.txt  Define.h  Mainly.cpp  Sandboxie.filters  Sandboxie.vcxproj  Sandboxie.vcxproj.filters
(+822 files in other folders)
